making-server-compatible